@@ -134,5 +134,6 @@ Pre-alpha changes since 02/15/2006...
      - Renamed service_reaper_frequency to check_result_reaper_frequency
      - Fractional notification and check intervals are now supported (e.g. "3.5" minutes)
      - Backslash chars are now used to escape command arguments that contain \ or ! characters
+     - Added 'external_command_buffer_slots' and 'check_result_buffer_slots' variables to specify size of internal buffers
  
 
